# covalent

./: .gitignore  README.md  pyproject.toml
data/: Danilack_et_al_2024_table_S2.csv  Danilack_et_al_2024_table_S3.csv  Danilack_et_al_2024_table_S4.csv  Danilack_et_al_2024_table_S5.csv  Liu_et_al_2025_data.csv  Liu_et_al_2025_struct.txt
src/covalent.egg-info/: PKG-INFO  SOURCES.txt
test/: acrylamide_dft.xyz  acrylamide_dft.xyz.bak  acrylamide_xtb.xyz  carbanion.py  carbanion2.py  fukui.py  fukui2.py  psi4_a_cyanoacrylamide_neutral.out  psi4_a_cyanoacrylamide_radical_anion.out  psi4_a_cyanoacrylate_neutral.out  psi4_a_cyanoacrylate_radical_anion.out  psi4_acrylamide_neutral.out  psi4_acrylamide_radical_anion.out  psi4_acrylic_acid_neutral.out  psi4_acrylic_acid_radical_anion.out  psi4_allenamide_neutral.out  psi4_allenamide_radical_anion.out  psi4_chloroacrylamide_neutral.out  psi4_chloroacrylamide_radical_anion.out  psi4_cyanoacrylamide_neutral.out  psi4_cyanoacrylamide_radical_anion.out  psi4_methacrylamide_neutral.out  psi4_methacrylamide_radical_anion.out  psi4_methyl_vinyl_ketone_neutral.out  psi4_methyl_vinyl_ketone_radical_anion.out  psi4_n_alkylacrylamide_neutral.out  psi4_n_alkylacrylamide_radical_anion.out  psi4_propiolamide_neutral.out  psi4_propiolamide_radical_anion.out  psi4_vinyl_sulfonamide_neutral.out  psi4_vinyl_sulfonamide_radical_anion.out  psi4_vinyl_sulfone_neutral.out  psi4_vinyl_sulfone_radical_anion.out  psi4_warhead.out  test_carbanion.py  test_fukui.py  test_geometry.py  test_intermediate.py  test_scaling.py  test_solvation.py  (+1 more)
(+40 files in other folders)
