[project]
name = "covalent"
version = "0.1.0"
authors = [{name = "Sung-Hun Bae", email = "sunghun.bae@gmail.com"}]
requires-python = ">= 3.12"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
covalent = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "==3.12"
psi4 = ">=1.10,<2"
rdkit = ">=2026.3.1,<2027"
